ui_components/src/travel/Travel.css
/* Layout */
#travelContainer {
    display: flex;
    flex-flow: column;
    align-items: center;
    justify-content: center;
    gap: 10px;
    margin: 20px auto 0 auto;
}
#travelContainer * {
    box-sizing: border-box;
}

:root {
    --scout-container-side-width: 230px;
    --travel-button-size: 42px;
}

.travel-filter {
    width: 93%;
    max-width: calc(1000px);
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: flex-start;
    background: var(--travel-ui-color);
    border: 1px solid rgba(0, 0, 0, 0.12);
}
.travel-wrapper {
    width: 95%;
    display: flex;
    gap: 5px;
    flex-direction: row;
    flex-grow: 0;
    position: relative;
}
.travel-panel {
    width: 100%;
    display: flex;
    flex-shrink: 0;
    flex-direction: column;
    flex-basis: 100%;
    align-items: center;
}

#travel-container {
    height: 450px;
    width: 98%;
}

/*@media (max-height: 1200px) {
    #travel-container {
        height: 550px;
    }
}
@media (max-height: 1150px) {
    #travel-container {
        height: 500px;
    }
}
@media (max-height: 1100px) {
    #travel-container {
        height: 450px;
    }
}
@media (max-height: 1000px) {
    #travel-container {
        height: 450px;
    }
}
@media (max-height: 950px) {
    #travel-container {
        height: 350px;
    }
}*/

.travel-scout-container.allies {
    left: 44px;
}
.travel-scout-container.allies .travel-scout-entry {
    flex-direction: row;
}
.travel-scout-container {
    width: 180px;
    max-height: 412px;
    flex-grow: 0;
    display: flex;
    border: 1px solid var(--border-color-default);
    position: absolute;
    right: 44px;
    top: 35px;
    overflow-y: clip;
}
.travel-scout {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 3px 0;
    z-index: 10;
    position: relative;
}
.travel-scout-entry {
    width: 100%;
    height: 36px;
    display: flex;
    flex-direction: row-reverse;
    align-items: center;
    position: relative;
    background: var(--travel-scout-background);
    border: 1px solid rgba(0, 0, 0, 0.12);
    clip-path: polygon(0% 5px, 5px 5px, 5px 0%, calc(100% - 5px) 0%, calc(100% - 5px) 5px, 100% 5px, 100% calc(100% - 5px), calc(100% - 5px) calc(100% - 5px), calc(100% - 5px) 100%, 5px 100%, 5px calc(100% - 5px), 0% calc(100% - 5px));
}

/* Slightly bigger buttons for small touchscreens
@media (max-width: 1200px) {
    .travel-wrapper {
        padding: 40px;
    }
}*/
@media (max-width: 600px) {
    .travel-wrapper {
        width: calc(95% - 10px - var(--scout-container-side-width));
    }

    .travel-scout-container {
        width: var(--scout-container-side-width);
    }

    .travel-scout-entry {
        width: 100%;
    }
}

/* Filters */
.travel-filter-title {
    flex-grow: 0;
    margin: 0 auto;
    padding: 5px 10px;

    color: var(--font-color-1);
    font-family: sans-serif;
    font-weight: bold;

}
.travel-filter-options {
    flex-grow: 2;
    display: flex;
    flex-flow: row wrap;
    align-items: center;
    padding: 10px;
}
.travel-filter-options label {
    margin: 0 10px 0 0;

    text-indent: 3px;
    color: var(--font-color-1) !important;
    text-transform: uppercase;
    font-size: 0.8em;
    font-family: sans-serif;
}

/* Map */

/* Scout Container */


/* Misc */
#travel-container .systemMessage-new {
    max-width: 100%;
    opacity: 1;
    animation-name: fadeOut;
    animation-duration: 2s;
    animation-timing-function: ease-out;
    animation-delay: 5s;
    animation-fill-mode: forwards;
    white-space: pre;
}

.travel-messages {
    position: absolute;
    bottom: 10px;
    left: 50px;
    z-index: 10000;
    pointer-events: none;
}

.travel-message {
    display: inline-block;
    text-align: center;
    padding: 5px 10px;

    font-family: sans-serif;
    color: var(--theme-text-color-normal);
}

.travel-actions {
    width: 98%;
    height: 225px;
    display: flex;
    flex-flow: row wrap;
    position: relative;
}

.travel-buttons {
    position: absolute;
    top: 10%;
    left: 0;
    right: 0;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    z-index: 20;
    gap: 10px;
}

#content .travel-buttons .button {
    height: var(--travel-button-size);
    min-width: 100px;
    font-family: sans-serif;
    text-transform: none;
    font-size: 12px;
    color: #eee1c8;
    font-weight: bold;
    text-shadow: 1px 2px 1px #1b1424;
    display: inline-block;
    padding: 5px 7px;
    margin-bottom: 10px;
    cursor: pointer;
    background: radial-gradient(var(--sidebar-button-background-color) 0%, var(--sidebar-button-border-color) 10%);
    border: 1px solid #2f2e5b;
    border-radius: 15px;
    text-align: center;
    box-shadow: 0 0 4px 0 rgba(0,0,0,0);
}
    #content .travel-buttons .button:hover {
        color: white;
    }
    #content .travel-buttons .button:active {
        color: #eee1c8;
        background: radial-gradient(var(--sidebar-button-border-color) 0%, var(--sidebar-button-background-color) 10%);
    }

    .travel-actions a {
        flex-grow: 1;
        display: block;
        width: 33.333%;
        height: 33.333%;
        z-index: 1;
        position: relative;
        cursor: pointer;
        user-select: none;
        touch-action: none;
        -webkit-tap-highlight-color: transparent;
        background: var(--travel-ui-color);
        box-shadow: 0 0 0 1px var(--travel-background-color) inset;
    }

:root {
    --travel-arrow-size: 16px;
    --travel-arrow-half-size: 8px;
}
.travel-actions a::before {
    content: ">";
    position: absolute;
    display: flex;
    align-items: center;
    justify-content: center;

    height: var(--travel-arrow-size);
    width: var(--travel-arrow-size);
    color: var(--font-color-3);
}
/* ... */

